# SysMLTeam12

./: .gitignore  CMakeLists.txt  env_tuhin.txt  environment.yml  eval_entropy_per_layer.py  main.cpp  requirements-dev.txt
data/RTE/: cached_dev_bert_base-RTE-two_stage_128_rte
data/SST-2/: cached_dev_bert_base-SST-2-two_stage_128_sst-2
examples/: run_highway_glue.py
notebooks/: Demo.ipynb  RTE.ipynb  SST2-ethan-batchsize.ipynb  SST2-tuhin.ipynb  SST2.ipynb  SST2_profile_R2.ipynb  batch_data.json  scratch.ipynb
notebooks/per_layer_exp2_out/: 0.01.out  0.05.out  0.2.out  0.4.out  0.6.out  0.8.out  0.out
plotting-per-layer-2-tk/0/: layer_metrics.json
plotting-per-layer-2-tk/1/: layer_metrics.json
plotting-per-layer-2-tk/10/: layer_metrics.json
plotting-per-layer-2-tk/11/: layer_metrics.json
plotting-per-layer-2-tk/2/: layer_metrics.json
plotting-per-layer-2-tk/3/: layer_metrics.json
plotting-per-layer-2-tk/4/: layer_metrics.json
plotting-per-layer-2-tk/5/: layer_metrics.json
plotting-per-layer-2-tk/6/: layer_metrics.json
plotting-per-layer-2-tk/7/: layer_metrics.json
plotting-per-layer-2-tk/8/: layer_metrics.json
plotting-per-layer-2-tk/9/: layer_metrics.json
scratchpad/: generate_per_layer_entropies.py  temp.cpp
scripts/: download_glue_data.py  entropy_pl_profile.sh  eval_entropy.sh  eval_entropy_eq1_per_layer.sh  eval_entropy_exp2_per_layer.sh  eval_entropy_exp2_per_layer_parameterised.sh  eval_entropy_per_layer.py  eval_entropy_pl.sh  eval_highway.sh  profile_lat_entropy.sh  train_highway.sh
transformers/: modeling_highway_bert.py
(+359 files in other folders)
